<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sushanth.identifyuser.Main2Activity">

    <TextView
        android:text="@string/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/textView11"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_toLeftOf="@+id/textView11"
        android:layout_toStartOf="@+id/textView11"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="44dp"
        android:id="@+id/textView15"
        android:text="@string/email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailEntry"
        android:hint="Enter your Email"
        android:layout_alignBaseline="@+id/textView15"
        android:layout_alignBottom="@+id/textView15"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailEntry"
        android:layout_alignLeft="@+id/textView15"
        android:layout_alignStart="@+id/textView15"
        android:layout_marginTop="28dp"
        android:id="@+id/textView16" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEntry"
        android:hint="Enter your Password"
        android:layout_alignBaseline="@+id/textView16"
        android:layout_alignBottom="@+id/textView16"
        android:layout_alignRight="@+id/emailEntry"
        android:layout_alignEnd="@+id/emailEntry"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <Button
        android:text="@string/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEntry"
        android:layout_alignLeft="@+id/emailEntry"
        android:layout_alignStart="@+id/emailEntry"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:id="@+id/sign" />

    <TextView
        android:text="@string/newuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign"
        android:layout_toStartOf="@+id/sign"
        android:layout_marginTop="11dp"
        android:id="@+id/textView17"
        android:layout_toLeftOf="@+id/sign" />

    <Button
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reg"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_below="@+id/sign"
        android:layout_alignRight="@+id/sign"
        android:layout_alignEnd="@+id/sign" />

</RelativeLayout>
